--- a/extension/ui.html
+++ b/extension/ui.html
@@ -417,6 +417,11 @@
             background: rgba(255, 255, 255, 0.12);
         }
 
+        #customInput:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+
         #customInput::placeholder {
             color: rgba(255, 255, 255, 0.5);
         }
@@ -435,24 +440,38 @@
             box-shadow: 0 4px 16px rgba(59, 130, 246, 0.3);
         }
 
-        #send-btn:hover {
+        #send-btn:hover:not(:disabled) {
             transform: translateY(-2px);
             box-shadow: 0 6px 20px rgba(59, 130, 246, 0.4);
             background: linear-gradient(135deg, #2563eb, #1d4ed8);
         }
 
-        #send-btn:active {
+        #send-btn:active:not(:disabled) {
             transform: translateY(0);
         }
 
+        #send-btn:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+            transform: none;
+        }
+
         @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
         }
 
         @keyframes pulse {
-            0%, 100% { opacity: 0.7; }
-            50% { opacity: 1; }
+            0%, 100% {
+                opacity: 0.7;
+            }
+            50% {
+                opacity: 1;
+            }
         }
 
         .typing-indicator {
@@ -495,7 +514,62 @@
                 opacity: 1;
             }
         }
+
+        .tools-wrapper {
+            position: relative;
+            display: inline-block;
+        }
+
+        #tools-toggle {
+            background: #4a90e2;
+            color: white;
+            border: none;
+            padding: 10px 16px;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 14px;
+            font-weight: bold;
+        }
+
+        #tools-toggle:hover {
+            background: #357abd;
+        }
+
+        .tools-section {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            position: absolute;
+            bottom: 110%;
+            left: -20px;
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            padding: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+            z-index: 10;
+        }
+
+        .tools-section button {
+            padding: 8px 12px;
+            border: none;
+            border-radius: 4px;
+            background: #f5f5f5;
+            cursor: pointer;
+            font-size: 13px;
+        }
+
+        .tools-section button:hover {
+            background: #e0e0e0;
+        }
+
+        .hidden {
+            display: none;
+        }
+
     </style>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=ink_pen"/>
 </head>
 <body>
 <div class="background">
@@ -516,6 +590,10 @@
                 <div class="header-subtitle">Your better Agent</div>
             </div>
         </div>
+        <div class="status-indicator">
+            <div class="status-dot"></div>
+            <span>Loading...</span>
+        </div>
     </div>
 
     <div class="chat-container" id="chatContainer">
@@ -526,10 +604,22 @@
         <div class="input-wrapper">
             <textarea id="customInput" placeholder="Ask anything..." rows="1"></textarea>
             <button id="send-btn">Send</button>
+            <div class="tools-wrapper">
+                <div id="tools-section" class="tools-section hidden">
+                    <button id="extract-btn">Extract Page Data</button>
+                    <button id="search-btn">Search Page</button>
+                </div>
+                <button id="tools-toggle">
+                    <span class="material-symbols-outlined">
+                        ink_pen
+                    </span>
+                </button>
+
+            </div>
         </div>
     </div>
 </div>
 
-<script src="popup.js"></script>
+<script src="actions.js"></script>
 </body>
 </html>
